fix nav menu on IE8

--- a/source/stylesheets/blocks/_menu.scss
+++ b/source/stylesheets/blocks/_menu.scss
@@ -48,7 +48,6 @@
   right: 0;
   z-index: 2;
   display: none;
-  width: 90%;
   min-width: 20em;
   background: $white;
   color: $black-10;
